# lfg-calc-py

./: .zenodo.json  Landfill_Example.yaml  README.md  landfill_script.py  pyproject.toml  requirements.txt  setup.py
docs/: assumptions.md
examples/: emission_calculations.py
lfg_calc_py/: WARM_script.py  __init__.py  common.py  ghgrp.py  landfill_script.py  lfg_calc_py.py  lfg_calc_py_yaml.py  lfg_log.py  lfg_yaml.py  metadata.py  settings.py  validation.py
lfg_calc_py/data/: EPA_Food_Waste_Gas_Collection_Efficiency.csv  IPCC_Waste_specific_k-values.csv  LFG_collection_scenario_values.csv  LFG_collection_scenarios.csv  Material_List.csv  README.md  WARM_Barlaz_Material_Decay_Rates.csv  WARM_Bartlaz_Material_Decay_Rates.csv  WARM_GasCollectionEfficiencies_v1.csv  lfg_config.yaml
lfg_calc_py/methods/: Default_Landfill_Parameters.yaml  Default_Parameters.yaml  Landfill_Example.yaml  Landfill_Example_Bulk_MSW.yaml  Landfill_Example_Material_Specific.yaml  Landfill_Example_Multi_Year_Acceptance.yaml  Landfill_Example_Single_Year_Acceptance.yaml  README.md  WARM_Example.yaml
