[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lfg-calc-py"
version = "0.1.0"
description = "Landfill Gas Emission Model"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["landfill", "methane emissions"]
authors = [
    {name = "Katherine Latoff"},
    {name = "Catherine Birney"},
    {name = "Andrew Beck"},
    {name = "Max Krause"},
    {name = "Wesley W. Ingwersen", email = "ingwersen.wesley@epa.org"},
]
dependencies = [
    'StEWI @ git+https://github.com/USEPA/standardizedinventories.git#egg=StEWI',
    'numpy>=2.2.4',
    'pandas>=2.2.3',
    'pip>=23.2.1',
    'pyyaml>=6.0.2',
    'sympy>=1.13.3',
    'pathlib>=1.0.1'
]

# Optional dependencies
#[project.optional-dependencies]

[project.urls]
"Homepage" = "https://github.com/USEPA/lfg-calc-py/tree/main"
